Fine tune plugin description

--- a/manifest.json
+++ b/manifest.json
@@ -9,5 +9,5 @@
 		"Buy Me a Coffee": "https://ko-fi.com/f84556"
 	},
 	"isDesktopOnly": false,
-	"description": "Send notes or text blocks to a Canvas file in different formats."
+	"description": "Send tasks, blocks, and notes to Canvas files as plain text, links, and embeds."
 }
