--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "send-to-canvas",
     "version": "0.1.0",
-    "description": "Send notes or text blocks to a Canvas file in different formats.",
+    "description": "Send tasks, blocks, and notes to Canvas files as plain text, links, and embeds.",
     "main": "main.js",
     "scripts": {
         "dev": "node esbuild.config.mjs",
